[package]
name = "cashcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
clap = {version	= "4.2.4", features = ["derive"]}
rusqlite = "0.29.0"
serde = { version = "1.0.178", features = ["serde_derive"] }
serde_json = "1.0.104"
